# imgfloat

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  diesel.toml  entrypoint  shell.nix
client/: Cargo.toml  Dioxus.toml  Makefile  float.html  index.html  read.html  settings.html  write.html
client/assets/css/: _variables.scss  backdrop.scss  index.scss  not_found.scss
client/assets/js/: backdrop.js  canvas.js
client/src/: bindings.rs  lib.rs  main.rs
client/src/components/: backdrop.rs  mod.rs
client/src/gfx/: mod.rs  polygon.rs  size.rs
client/src/routes/: home.rs  not_found.rs
client/static/js/: backdrop.js  imgfloat-reader.js  imgfloat-writer.js  render.js  settings.js
client/static/style/: base.css  canvas.css  imgfloat.css  index.css
client_old/: read.html  write.html
client_old/static/js/: imgfloat-reader.js  imgfloat-writer.js
client_old/static/style/: canvas.css  login.css
migrations/2025-01-17-192845_users/: up.sql
migrations/2025-01-17-201250_admins/: down.sql  up.sql
migrations/2025-01-19-163741_assets/: down.sql  up.sql
migrations/2025-01-24-140656_user_settings/: down.sql  up.sql
server/: .env.template  Cargo.toml  Makefile
server/migrations/2025-01-17-201250_admins/: up.sql
server/src/: lib.rs  main.rs
server/src/domain/: session.rs  state.rs
server/src/domain/db/: sqlite.rs
server/src/domain/message/: state.rs
server/src/models/: channel_admin.rs  schema.rs  user.rs  user_settings.rs
server/src/routes/: mod.rs
server/src/routes/api/: channel_admin.rs  mod.rs  settings.rs  whoami.rs
server/src/routes/auth/: callback.rs  login.rs
server/src/routes/ws/: write.rs
server/src/twitch/: authenticator.rs  credentials.rs  mod.rs  response.rs  user.rs  user_tokens.rs
server/tests/: mod.rs
server/tests/fixture/: authenticator.rs  db.rs  mod.rs  tokens.rs  user.rs
server/tests/routes/: mod.rs  test_callback.rs  test_channel_admin.rs  test_login.rs
src/: lib.rs  main.rs
src/client/: index.html  settings.html
src/client/static/js/: backdrop.js  imgfloat.js  settings.js
src/client/static/style/: settings.css
src/domain/: application_controller.rs  channel_controller.rs  chat_daemon.rs  env.rs  irc_message.rs  json_response.rs  middleware.rs  mod.rs  percentage.rs  remote_image_blob.rs  session.rs  state.rs
src/domain/db/: mod.rs  sqlite.rs
src/domain/message/: mod.rs  state.rs
src/error/: http.rs
src/models/: asset.rs  channel_admin.rs  mod.rs  schema.rs  settings.rs  user.rs  user_settings.rs
src/routes/: mod.rs  whoami.rs
src/routes/api/: asset.rs  mod.rs  settings.rs  whoami.rs
src/routes/auth/: callback.rs  login.rs  logout.rs
src/routes/ws/: chat.rs  read.rs  write.rs
src/twitch/: auth_callback_query.rs  credentials.rs  mod.rs
tests/fixture/: mod.rs  session.rs
tests/routes/: mod.rs  test_callback.rs  test_login.rs  test_settings.rs
