[package]
name = "imgfloat"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
time = "0.3.30"
futures = "0.3.31"
axum-login = "0.16.0"
tracing-subscriber = "0.3.19"
tower-sessions = "0.13.0"
async-trait = "0.1.83"
