[package]
name = "imgfloat"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
diesel = { version = "2.2.0", features = ["postgres", "sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
time = "0.3.30"
futures = "0.3.31"
axum-login = "0.16.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tower-sessions = "0.13.0"
async-trait = "0.1.83"
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tokio-native-tls = "0.3.1"
tokio-util = "0.7.13"
regex = "1.11.1"
tracing = "0.1.41"
bytes = "1.9.0"
base64 = "0.22.1"
mime = "0.3.17"
