[package]
name = "client"
version = "0.1.0"
authors = ["Andreas Krühlmann <andreas@kruhlmann.dev>"]
edition = "2021"

[dependencies]
dioxus = { version = "0.6.2", features = ["web", "router"] }
dioxus-logger = "0.6.2"
js-sys = "0.3.77"
reqwest = { version = "0.12.12", features = ["json"] }
tracing = "0.1.41"
wasm-bindgen = "0.2.92"
web-sys = { version = "0.3.77", features = [
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "HtmlDocument",
    "Performance",
    "Window",
] }
