[package]
name = "imgfloat"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
axum = { version = "0.7", features = ["ws", "multipart", "macros"] }
axum-login = "0.16.0"
base64 = "0.22.1"
bytes = "1.9.0"
diesel = { version = "2.2.0", features = [
    "sqlite",
    "returning_clauses_for_sqlite_3_35",
    "r2d2",
] }
dotenvy = "0.15"
futures = "0.3.31"
mime_guess = "2.0.5"
r2d2 = "0.8.10"
regex = "1.11.1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10.8"
time = "0.3.30"
tokio = { version = "1.0", features = ["full"] }
tokio-native-tls = "0.3.1"
tokio-util = "0.7.13"
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tower-sessions = "0.13.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.12.0", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
] }

[dev-dependencies]
async-std = { version = "1.13.0", features = ["attributes"] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
http-body-util = "0.1.2"
rstest = "0.24.0"
